gke/ghost/ghost.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: ghost
  name: ghost
  labels:
    app.kubernetes.io/name: ghost
spec:
  selector:
    app.kubernetes.io/name: ghost
  ports:
    - protocol: TCP
      name: http
      port: 2368
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ghost
  name: ghost
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: ghost
  template:
    metadata:
      labels:
       app.kubernetes.io/name: ghost
    spec:
      containers:
      - name: ghost
        image: ghost:4
        ports:
        - name: http
          containerPort: 2368
        volumeMounts:
        - mountPath: /var/lib/ghost/content
          name: ghost-content
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "300m"
      volumes:
      - name: ghost-content
        persistentVolumeClaim:
         claimName: nfs-pvc
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: ghost
  name: ghost
  labels:
    app.kubernetes.io/name: ghost
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`k8s.dockdocs.es`)
      kind: Rule
      services:
        - namespace: ghost
          name: ghost
          port: 2368
  tls:
    certResolver: letsencrypt
---
